<resources>
    <string name="app_name">HtmlCoach</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="variable1">HTML COURSE</string>
    <string name="variable2">Welcome to HTML course</string>
    <string name="variable3">What is HTML?</string>
    <string name="variable4">HTML is Hyper Text Markup Language. With HTML you can create your own Web site. This tutorial teaches you everything about HTML. HTML is easy to learn - You will enjoy it.</string>
    <string name="variable5">Sign Up</string>
    <string name="variable6">LOGIN</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="variable7">Name</string>
    <string name="variable8">E-mail</string>
    <string name="variable9">Phone Number</string>
    <string name="variable10">password</string>
    <string name="variable12">Sign Up</string>
    <string name="variable13">Already have an account</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="variable11">REGISTRATION PAGE</string>
    <string name="title_activity_heading">Heading</string>
    <string name="title_activity_styles">Styles</string>
    <string name="title_activity_css">CSS</string>
    <string name="title_activity_links">Links</string>
    <string name="title_activity_tables">Tables</string>
    <string name="variable20">HEADINGS</string>
    <string name="variable21">STYLES</string>
    <string name="variable22">CSS</string>
    <string name="variable23">LINKS</string>
    <string name="variable24">IMAGES</string>
    <string name="variable25">TABLES</string>
    <string name="variable27">TOPICS TO BE COVERED</string>
    <string name="title_activity_images">Images</string>
    <string name="variable30">HEADING</string>
    <string name="variable31"><![CDATA[Headings are defined with the <h1> to <h6> tags.<h1> defines the most important heading.<h6> defines the least important heading. Use HTML headings for headings only. Don\'t use headings to make text BIG or bold. Search engines use your headings to index the structure and content of your web pages. h1 headings should be main headings, followed by h2 headings, then the less important h3, and so on.]]></string>
    <string name="variable32">html</string>
    <string name="variable33">result</string>
</resources>
